--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
     <head>
         <meta charset="utf-8"/>
-        <title>Gallows game</title>
+        <title>Hangman game</title>
         
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet"/>
         <link rel="stylesheet" href="style.css" type="text/css"/>
